# koon

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURE_REQUESTS.md  LICENSE  README.md  SECURITY.md  build.bat  test_cli.sh  test_node.cjs  test_python.py
.github/actions/setup-windows/: action.yml
.github/workflows/: build-macos.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: fingerprint_test.rs  h3_test.rs
crates/core/src/: client.rs  cookie.rs  error.rs  http1.rs  http3.rs  lib.rs  multipart.rs  pool.rs  proxy.rs  streaming.rs  util.rs  websocket.rs
crates/core/src/client/: alt_svc.rs  connection.rs  execute.rs  h1.rs  h2.rs  h3.rs  headers.rs  mod.rs  response.rs
crates/core/src/dns/: mod.rs  resolver.rs
crates/core/src/http2/: config.rs  mod.rs
crates/core/src/profile/: chrome.rs  edge.rs  firefox.rs  mod.rs  okhttp.rs  opera.rs  safari.rs
crates/core/src/proxy/: ca.rs  config.rs  mod.rs  server.rs
crates/core/src/quic/: config.rs  mod.rs  transport.rs
crates/core/src/tls/: cert_compression.rs  config.rs  connector.rs  mod.rs  session_cache.rs
crates/core/tests/: features.rs  fingerprint.rs
crates/node/: Cargo.toml  index.d.ts  index.js  package.json
crates/node/npm/darwin-arm64/: package.json
crates/node/npm/darwin-x64/: package.json
crates/node/npm/linux-x64-gnu/: package.json
crates/node/npm/win32-x64-msvc/: package.json
crates/node/src/: lib.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/python/koon/: __init__.py  __init__.pyi
crates/python/src/: lib.rs
crates/r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE
crates/r/R/: extendr-wrappers.R  koon.R  zzz.R
crates/r/man/: Koon.Rd  koon_browsers.Rd
crates/r/src/: Makevars  Makevars.win  entrypoint.c
crates/r/src/rust/: Cargo.toml
crates/r/src/rust/.cargo/: config.toml
crates/r/src/rust/src/: lib.rs
crates/r/vignettes/: advanced-usage.Rmd  getting-started.Rmd  sessions-and-cookies.Rmd
scripts/: bump-version.sh
todo/: bugfix.md  fingerprint-test.mjs  fingerprint-test.py
todo/pre-release/: run-all.sh  test-cli.sh  test-node.mjs  test-python-async.py  test-python-sync.py  test-r.R
tools/capture/: capture.mjs  convert.mjs  download.mjs  index.mjs  mappings.mjs  package-lock.json  package.json
tools/capture/profiles/: chrome-131-windows.json  chrome-132-windows.json  chrome-133-windows.json  chrome-134-windows.json  chrome-135-windows.json  chrome-136-windows.json  chrome-137-windows.json  chrome-138-windows.json  chrome-139-windows.json  chrome-140-windows.json  chrome-141-windows.json  chrome-142-windows.json  chrome-143-windows.json  chrome-144-windows.json  chrome-145-windows.json  firefox-135-windows.json  firefox-147-windows.json
tools/capture/raw/: chrome-131-windows.json  chrome-132-windows.json  chrome-133-windows.json  chrome-134-windows.json  chrome-135-windows.json  chrome-136-windows.json  chrome-137-windows.json  chrome-138-windows.json  chrome-139-windows.json  chrome-140-windows.json  chrome-141-windows.json  chrome-142-windows.json  chrome-143-windows.json  chrome-144-windows.json  chrome-145-windows.json  firefox-135-windows.json  firefox-147-windows.json
