[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/node",
    "crates/python",
]
exclude = [
    "crates/r/src/rust",
]

# Exclude koon-node from `cargo test` — it's a cdylib that requires Node.js
# runtime for napi symbol resolution. Running it without Node produces hundreds
# of "Load Node-API [...] failed" warnings. It has no Rust unit tests anyway.
default-members = ["crates/core"]

[workspace.package]
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.clippy]
type_complexity = "allow"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
