[package]
name = "koon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "koon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
koon-core = { path = "../core", features = ["doh"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
http = "1"
