[package]
name = "koon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser-impersonating HTTP client — TLS, HTTP/2, HTTP/3 fingerprint spoofing. Passes Akamai & Cloudflare. 175 browser profiles."
repository = "https://github.com/scrape-hub/koon"
homepage = "https://github.com/scrape-hub/koon"
keywords = ["tls-fingerprint", "browser-impersonation", "anti-bot", "web-scraping", "http-client"]
categories = ["web-programming::http-client", "network-programming"]

[features]
default = ["socks"]
socks = ["dep:tokio-socks"]
doh = ["dep:hickory-proto"]

[dependencies]
# TLS via BoringSSL (fork with quinn-btls from_builder() for per-browser H3 TLS fingerprint)
btls = { git = "https://github.com/scrape-hub/btls.git", rev = "3ff178d2" }
tokio-btls = { git = "https://github.com/scrape-hub/btls.git", rev = "3ff178d2" }
quinn-btls = { git = "https://github.com/scrape-hub/btls.git", rev = "3ff178d2" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"

# HTTP/2 with frame-level control (fork with HeadersOrder support)
http2 = { git = "https://github.com/scrape-hub/http2.git", tag = "v0.5.12-headers-order", features = ["unstable"] }

# HTTP types
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros"] }

# Proxy support
tokio-socks = { version = "0.5", optional = true }

# Compression/decompression (cert compression + response body)
brotli = "8"
flate2 = "1"
zstd = "0.13"

# Root CA certificates (Mozilla bundle, same as wreq)
webpki-root-certs = "1"

# Serialization (JSON profile system)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP/1.1 response parsing
httparse = "1"

# WebSocket frame codec (no TLS features — we use our own BoringSSL)
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", default-features = false }

# Async stream utilities (SinkExt, StreamExt for WebSocket)
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# DNS-over-HTTPS (optional)
hickory-proto = { version = "0.25", optional = true }

# Randomization (fingerprint jitter)
rand = "0.9"

# Base64 encoding (session export/import)
base64 = "0.22"

# Character encoding (charset-aware text decoding)
encoding_rs = "0.8"

# Utilities
url = "2"
thiserror = "2"
smallvec = "1"
pin-project-lite = "0.2"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
