[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "koon"
version = "0.1.0"
description = "Browser impersonation HTTP client with TLS/HTTP2 fingerprint spoofing"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "koon._native"
python-source = "python"
