[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "koon"
version = "0.6.0"
description = "Browser impersonation HTTP client with TLS/HTTP2 fingerprint spoofing"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wedge" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/scrape-hub/koon"
Repository = "https://github.com/scrape-hub/koon"
Issues = "https://github.com/scrape-hub/koon/issues"
Changelog = "https://github.com/scrape-hub/koon/blob/master/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "koon._native"
python-source = "python"
